--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -159,6 +159,7 @@
             <wm-dialogactions name="dialogactions2">
                 <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button3" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
+            <wm-label padding=".5em 0.5em 1em 0.5em" name="label4" fontweight="bold" caption="This is an &quot;Internal-Only&quot; Form Category, which is only visible to Municipality Employees." show="bind:Widgets.gridFormcategories.selecteditem.municipalityInternalCategory"></wm-label>
             <wm-livegrid formlayout="dialog" name="livegridFormsInCategory">
                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvFormCategoryMappingData.dataSet" navigation="Classic" name="gridFormsInCategory" confirmdelete="Are you sure you would like to remove the selected form from this category?"
                 filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
@@ -178,7 +179,8 @@
                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="Variables.nvGotoEditForm.invoke()" disabled="false"></wm-grid-row-action>
                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                 </wm-grid>
-                <wm-liveform novalidate="false" errormessage="" title="Add Form to Category" formlayout="dialog" iconclass="wi wi-payment" dataset="bind:Variables.lvFormCategoryMappingData.dataSet" captionalign="left" captionposition="top" name="liveformFormsInCategory">
+                <wm-liveform novalidate="false" errormessage="The selected form has already been added to this category" title="Add Form to Category" formlayout="dialog" iconclass="wi wi-payment" dataset="bind:Variables.lvFormCategoryMappingData.dataSet"
+                captionalign="left" captionposition="top" name="liveformFormsInCategory">
                     <wm-layoutgrid columns="1" name="layoutgrid8">
                         <wm-gridrow name="gridrow15_1">
                             <wm-gridcolumn columnwidth="12" name="gridcolumn18">
@@ -193,9 +195,9 @@
                             </wm-gridcolumn>
                         </wm-gridrow>
                     </wm-layoutgrid>
-                    <wm-form-field name="formCategories" displayname="Form Categories" show="false" primary-key="false" generator="assigned" key="formCategories" type="list" is-related="true" readonly="false" required="false" widget="select" placeholder="Select value"
-                    dataset="bind:Widgets.gridFormsInCategory.selecteditem.formCategories" datafield="All Fields" displayfield="category" defaultvalue="bind:Widgets.gridFormsInCategory.selecteditem.formCategories"></wm-form-field>
                     <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
+                    <wm-form-field name="formCategories" displayname="Form Categories" show="false" primary-key="false" generator="assigned" key="formCategories" type="list" is-related="true" readonly="false" required="false" widget="select"
+                    placeholder="Select value" dataset="bind:Widgets.gridFormsInCategory.selecteditem.formCategories" datafield="All Fields" displayfield="category" defaultvalue="bind:Widgets.gridFormsInCategory.selecteditem.formCategories"></wm-form-field>
                     <wm-form-action key="save" display-name="Add Form" show="true" class="form-save btn-primary" iconclass="wi wi-plus" title="Add Form" disabled="false" type="submit" update-mode="true"></wm-form-action>
                     <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                 </wm-liveform>
