--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -1129,6 +1129,12 @@
                         <wm-label padding="unset 0.5em" name="label119_1" caption="Fees must be paid before requesting this type of inspection." class="text-danger" show="bind:(Variables.CurrentForm.dataSet.data[$i].balanceDue | stringToNumber) > 0 &amp;&amp; inspectionObject.requireFeesPaidBeforeScheduling"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow107">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn198">
+                        <wm-label padding="unset 0.5em" name="labelOperatingHoursError" class="text-danger" caption="bind:'The Municipality is not open at this hour. Please select a time between ' + Variables.lvMunicipality.dataSet.data[$i].openTime + ' and ' + Variables.lvMunicipality.dataSet.data[$i].closeTime + '.'"
+                        show="bind:hasOperatingTimeError()"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow89">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn165">
                         <wm-composite name="composite9">
