slight tweaks to payment success dialog. unfortunately, couldn't change the button color to match the site style guidelines, due to dialog type that has been implemented Files modified - [MunicipalityCheckOut,pom.xml]

--- a/src/main/webapp/pages/MunicipalityCheckOut/MunicipalityCheckOut.html
+++ b/src/main/webapp/pages/MunicipalityCheckOut/MunicipalityCheckOut.html
@@ -68,6 +68,6 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="viewPaymentSuccess">
-        <wm-alertdialog name="alertdialogPaymentSuccess" message="Thank you for your payment" alerttype="success" title="Payment Success" iconclass="wi wi-attach-money" on-ok="Variables.goToPage_MyCart.invoke()"></wm-alertdialog>
+        <wm-alertdialog name="alertdialogPaymentSuccess" message="Thank you! The payment you submitted has been processed." alerttype="success" title="Payment Received" iconclass="wi wi-attach-money" on-ok="Variables.goToPage_MyCart.invoke()"></wm-alertdialog>
     </wm-view>
 </wm-page>
