made new munis "Active"=false by default. made new form categories "Internal"=false by default. Files modified - [ManageMunicipalities,ManageForms]

--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -93,7 +93,8 @@
                                                     <wm-gridrow name="gridrow1">
                                                         <wm-gridcolumn name="gridcolumn1" columnwidth="12" padding="2em unset unset unset">
                                                             <wm-form-field name="municipalityInternalCategory" displayname="Municipality Internal Category" show="true" primary-key="false" generator="assigned" key="municipalityInternalCategory" type="boolean"
-                                                            readonly="false" required="false" widget="checkbox" defaultvalue="true" hint="If selected, this category will only be visible as a selection for municipality employees."></wm-form-field>
+                                                            readonly="false" required="false" widget="checkbox" defaultvalue="false" hint="If selected, this category will only be visible as a selection for municipality employees." checkedvalue="true"
+                                                            uncheckedvalue="false"></wm-form-field>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                 </wm-layoutgrid>
