minor updates to letters Files modified - [EditForm]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -501,11 +501,11 @@
                                                                     </wm-gridcolumn>
                                                                     <wm-gridcolumn name="gridcolumn2-03" columnwidth="4" padding="unset 1em unset unset">
                                                                         <wm-form-field name="letterTemplate" displayname="Letter Template" show="true" primary-key="false" generator="assigned" key="letterTemplate" type="string" readonly="false" required="false" widget="select" maxchars="255" dataset="bind:Variables.stvLetterTemplates.dataSet"
-                                                                        datafield="dataValue" displayfield="dataValue" defaultvalue="bind:Variables.stvLetterTemplates.dataSet[0].dataValue" placeholder="Select value" width="180px"></wm-form-field>
+                                                                        datafield="dataValue" displayfield="dataValue" placeholder="Select value" width="180px"></wm-form-field>
                                                                         <wm-label padding="unset 0.5em" caption="Select which letter templates will be used to generate letters for this status." class="help-block" fontsize="0.8" fontunit="em" name="label39-03"></wm-label>
                                                                     </wm-gridcolumn>
                                                                     <wm-gridcolumn name="gridcolumn2-03" columnwidth="4" padding="unset 1em unset unset">
-                                                                        <wm-form-field name="attacheToEmail" displayname="Attach to Email" show="true" primary-key="false" generator="assigned" key="attachToEmail" type="boolean" widget="checkbox" defaultvalue="false" placeholder="" hint="Attach the letter to the email associated with this form status."
+                                                                        <wm-form-field name="attacheToEmail" displayname="Attach to Email" show="true" primary-key="false" generator="assigned" key="attachToEmail" type="boolean" widget="checkbox" defaultvalue="false" placeholder="" hint="Attach the letters to the email associated with this form status."
                                                                         checkedvalue="true" uncheckedvalue="false"></wm-form-field>
                                                                     </wm-gridcolumn>
                                                                 </wm-panel>
